description and photos of games

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                         <article class="projects_item" id="tetris">
                             <h3 class="projects_inner_header" >Tetris</h3>
                             <div class="projects_inner_item_container">
-                                <div class="projects_item_photo">Game photo</div>
+                                <div class="projects_item_photo photo-1">Game photo</div>
                                 <div class="projects_item_text_container">
-                                    <p class="projects_item_description">Challenge yourself with modified version of Tetris game! Unique features of buttons allowing board rotation will check your adaptibility to new situations. Or maybe you will be disoriented after pressing buttons shitching action of left and right arrows?</p>
-                                    <p class="projects_item_description">Technology used: HTML, CSS, JS, ES6</p>
+                                    <p class="projects_item_description">Challenge yourself with modified version of Tetris game! Be carefull - the bomb is falling! Decide quickly what to destroy. Want to check your reaction to unexpected situation - just rotate the board  upside-down. Or maybe you will be disoriented when action of left and right arrows will be switched? Try it!</p>
+                                    <p class="projects_item_description">Technology: HTML5, CSS3, JS, ES6, Webpack, Rest API, npm</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Tetris/">Click to play</a></button>
                             </div>
@@ -56,10 +56,10 @@
                         <article class="projects_item" id="memory">
                             <h3 class="projects_inner_header">Memory for scientists</h3>
                             <div class="projects_inner_item_container">
-                                <div class="projects_item_photo">Game photo</div>
-                                <div class="projects_item_text_container">Game description
-                                    <p class="projects_item_description">Are you a scientists? Or maybe you are curious about science terminology game? Try it and check your knowledge or luck! Unique feature of this game: checking is not  of buttons allowing board rotation will check your adaptibility to new situations. Or maybe you will be disoriented after pressing buttons shitching action of left and right arrows?</p>
-                                    <p class="projects_item_description">Technology used: HTML, CSS, JS, ES6</p>
+                                <div class="projects_item_photo photo-2"></div>
+                                <div class="projects_item_text_container">
+                                    <p class="projects_item_description">Are you a scientist? Or maybe you are curious about science terminology game? Try it and check your knowledge or luck! The game is not a matching of two identical photos but you have to find proper pair - name and description. Checking the matching is done only when you decide to do so by clicking the button. Enjoy learning!</p>
+                                    <p class="projects_item_description">Technology: HTML5, CSS3, JS, ES6</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Memory_for_scientists/">Click to play</a></button>
                             </div>
@@ -67,10 +67,10 @@
                         <article class="projects_item" id="life">
                             <h3 class="projects_inner_header">Game of life</h3>
                             <div class="projects_inner_item_container">
-                                <div class="projects_item_photo">Game photo</div>
-                                <div class="projects_item_text_container">Game description
-                                    <p class="projects_item_description">Observe the fascinating simulation of life of cells. Is it to crowded for them to live? Or maybe they are too lonely and incapable of surviving on their own. Play the game and check how the cell living status evolves! Unique feature of this game: checking is not  of buttons allowing board rotation will check your adaptibility to new situations. Or maybe you will be disoriented after pressing buttons shitching action of left and right arrows?</p>
-                                    <p class="projects_item_description">Technology used: HTML, CSS, JS, ES6</p>
+                                <div class="projects_item_photo photo-3"></div>
+                                <div class="projects_item_text_container">
+                                    <p class="projects_item_description">Observe the fascinating simulation of life of cells. Is it to crowded for them to live? Or maybe they are incapable of surviving on their own? Play the game and check how the cell living status evolves! You can always pause the game and restart it. You can also reset the board and start anew. Watch the beautiful structures created by living cells!</p>
+                                    <p class="projects_item_description">Technology used: HTML5, CSS3, JS, ES6, npm, Webpack</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Game_of_life/">Click to play</a></button>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/React_Game_of_Life/">Click to play (react version)</a></button>
@@ -79,10 +79,10 @@
                         <article class="projects_item" id="furry">
                             <h3 class="projects_inner_header">Furry game</h3>
                             <div class="projects_inner_item_container">
-                                <div class="projects_item_photo">Game photo</div>
-                                <div class="projects_item_text_container">Game description
-                                    <p class="projects_item_description">Challenge yourself with modified version of Tetris game! Unique features of buttons allowing board rotation will check your adaptibility to new situations. Or maybe you will be disoriented after pressing buttons shitching action of left and right arrows?</p>
-                                    <p class="projects_item_description">Technology used: HTML, CSS, JS, ES6</p>
+                                <div class="projects_item_photo photo-4"></div>
+                                <div class="projects_item_text_container">
+                                    <p class="projects_item_description">Fluffy Furry is hungry and wants to eat the dot! Feed the Furry by leading it to eat as many dots as possible! But be carefull not to hit the walls because Furry will faint and stop moving!</p>
+                                    <p class="projects_item_description">Technology used: HTML5, CSS3, JS, npm</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Furry_Game/">Click to play</a></button>
                             </div>
