games and websites styling and description

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="main_container">
         <aside>
-            This is an advertisement banner - walking Smurf
+            <div class="aside_container_smurf"></div>
         </aside>
         <main class="container">
             <section class="projects">
@@ -89,8 +89,32 @@
                         </article>
                     </div>
                 </section>
-                <section>
-                    <h2>Web/page, animation description</h2>
+                <section class="projects_categories webpages">
+                    <h2 class="projects_outer_header">Web/page, animation description</h2>
+                    <div class="projects_item_container">
+                        <article class="projects_item" id="sit">
+                            <h3 class="projects_inner_header" >Sit on chair</h3>
+                            <div class="projects_inner_item_container">
+                                <div class="projects_item_photo photo-1">Sitonchai</div>
+                                <div class="projects_item_text_container">
+                                    <p class="projects_item_description">Check the website of show and choose the chair. Example of shop webpage</p>
+                                    <p class="projects_item_description">Technology: HTML5, CSS3, JS, ES6</p>
+                                </div>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/Sit_on_chair/">Click to visit</a></button>
+                            </div>
+                        </article>
+                        <article class="projects_item" id="animation">
+                            <h3 class="projects_inner_header" >Animation</h3>
+                            <div class="projects_inner_item_container">
+                                <div class="projects_item_photo photo-1">anim</div>
+                                <div class="projects_item_text_container">
+                                    <p class="projects_item_description">Enjoy the animation written in CSS. The animation consists of two parts: 1) appearance and moving icon and description and 2) appearance and moving of text</p>
+                                    <p class="projects_item_description">Technology: HTML5, CSS3</p>
+                                </div>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/Animation/">Click to visit</a></button>
+                            </div>
+                        </article>
+                    </div>
                 </section>
                 <section>
                     List of movies
