--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/main.css" rel="stylesheet" />
+    <script src="./js/app.js"></script>
 </head>
 <body>
     <header>
         <nav class="container">
-            <div class="nav_logo">Logo</div>
-            <div class="nav_hamburger">&#9776;</div>
+            <div class="nav_logo">AS</div>
+            <div class="nav_hamburger">
+                <span class="nav_hamburger_sign">&#9776;</span>
+                <ul class="nav_hamburger_list">
+                    <li class="nav_hamburger_list_item">Games: Tetris</li>
+                    <li class="nav_hamburger_list_item">Games: Memory for scientists</li>
+                    <li class="nav_hamburger_list_item">Games: Game of life</li>
+                    <li class="nav_hamburger_list_item">Games: Furry game</li>
+                    <li class="nav_hamburger_list_item">Website: Sit on chair</li>
+                    <li class="nav_hamburger_list_item">Website: Animation</li>
+                </ul>
+
+            </div>
             <ul class="nav_list1">
                 <li class="nav_list2_container">Games
                     <ul class="nav_list2">
@@ -34,7 +46,7 @@
 
     <div class="main_container">
         <aside>
-            <div class="aside_container_smurf"></div>
+            <div class="aside_container_smurf" id="smurf"></div>
         </aside>
         <main class="container">
             <section class="projects">
@@ -116,47 +128,6 @@
                         </article>
                     </div>
                 </section>
-                <section>
-                    List of movies
-                    <div class="grid-container">
-                        <div class="row header">
-                            <div class="col-3">Movie title</div>
-                            <div class="col-1">Year</div>
-                            <div class="col-4">Title</div>
-                            <div class="col-3">Director</div>
-                            <div class="col-1">Rating</div>
-                        </div>
-                        <div class="row inside"></div>
-                        <div class="row summary">
-                            <div class="col-3">Nr of movies</div>
-                            <div class="col-1">Average year</div>
-                            <div class="col-4"></div>
-                            <div class="col-3"></div>
-                            <div class="col-1">Average rating</div>
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    Choose the best pratchett book
-                </section>
-                <section>
-
-                </section>
-                <section>
-                    Leave a message
-                    <form>
-                        <label>Name
-                            <input type="text" />
-                        </label>
-                        <label>Surname
-                            <input type="text" />
-                        </label>
-                        <label> Message
-                            <textarea></textarea>
-                        </label>
-                        <button type="submit">Send</button>
-                    </form>
-                </section>
             </section>
         </main>
         <aside>
@@ -164,7 +135,9 @@
         </aside>
     </div>
     <footer>
-
+        <div class="container">
+            <span>&copy;Anna Stachurska</span>
+            <span>2018</span>
+        </div>
     </footer>
-
 </body>
