second walking smurf

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="main_container">
         <aside>
-            <div class="aside_container_smurf" id="smurf"></div>
+            <div class="aside_smurf"></div>
         </aside>
         <main class="container">
             <section class="projects">
@@ -130,8 +130,8 @@
                 </section>
             </section>
         </main>
-        <aside>
-            This is another advertisement - jumping frog
+        <aside class="rotated">
+            <div class="aside_smurf aside_rotated"></div>
         </aside>
     </div>
     <footer>
