second smurf waling inside container

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </section>
             </section>
         </main>
-        <aside class="rotated">
+        <aside id="rotated">
             <div class="aside_smurf aside_rotated"></div>
         </aside>
     </div>
