--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <div class="projects_inner_item_container">
                                 <div class="projects_item_photo photo-4"></div>
                                 <div class="projects_item_text_container">
-                                    <p class="projects_item_description">Fluffy Furry is hungry and wants to eat the dot! Feed the Furry by leading it to eat as many dots as possible! But be carefull not to hit the walls because Furry will faint and stop moving!</p>
+                                    <p class="projects_item_description">Fluffy Furry is hungry and wants to eat the dot. Feed the Furry by leading it to eat as many dots as possible. Be careful not to hit the walls because Furry will faint and stop moving.</p>
                                     <p class="projects_item_description">Technology used: HTML5, CSS3, JS, npm</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Furry_Game/">Click to play</a></button>
