--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
     </div>
     <footer>
         <div class="container">
-            <span>&copy;Anna Stachurska</span>
-            <span>2018</span>
+            <span class="footer_description">&copy; Anna Stachurska</span>
+            <span class="footer_description">2018</span>
         </div>
     </footer>
 </body>
