--- a/index.html
+++ b/index.html
@@ -14,31 +14,30 @@
             <div class="nav_hamburger">
                 <span class="nav_hamburger_sign">&#9776;</span>
                 <ul class="nav_hamburger_list">
-                    <li class="nav_hamburger_list_item">Games: Tetris</li>
-                    <li class="nav_hamburger_list_item">Games: Memory for scientists</li>
-                    <li class="nav_hamburger_list_item">Games: Game of life</li>
-                    <li class="nav_hamburger_list_item">Games: Furry game</li>
-                    <li class="nav_hamburger_list_item">Website: Sit on chair</li>
-                    <li class="nav_hamburger_list_item">Website: Animation</li>
+                    <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#tetris">Games: Tetris</a></li>
+                    <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#memory">Games: Memory for scientists</a></li>
+                    <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#life">Games: Game of life</a></li>
+                    <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#furry">Games: Furry game</a></li>
+                    <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#sit">Website: Sit on chair</a></li>
+                    <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#animation">Website: Animation</a></li>
                 </ul>
 
             </div>
             <ul class="nav_list1">
                 <li class="nav_list2_container">Games
-                    <ul class="nav_list2">
-                        <li><a class="nav_link" href="#memory">Memory for scientists</a></li>
-                        <li><a class="nav_link" href="#tetris">Tetris</a></li>
-                        <li><a class="nav_link" href="#life">Game of life</a></li>
-                        <li><a class="nav_link" href="#furry">Furry game</a></li>
+                    <ul class="nav_list2 games">
+                        <li class="nav_list2_item"><a class="nav_link" href="#tetris">Tetris</a></li>
+                        <li class="nav_list2_item"><a class="nav_link" href="#memory">Memory for scientists</a></li>
+                        <li class="nav_list2_item"><a class="nav_link" href="#life">Game of life</a></li>
+                        <li class="nav_list2_item"><a class="nav_link" href="#furry">Furry game</a></li>
                     </ul>
                 </li>
                 <li class="nav_list2_container">Web pages/Animation
-                    <ul class="nav_list2">
-                        <li><a class="nav_link" href="#sit">Sit on chair</a></li>
-                        <li><a class="nav_link" href="#animation">Animation</a></li>
+                    <ul class="nav_list2 web">
+                        <li class="nav_list2_item"><a class="nav_link" href="#sit">Sit on chair</a></li>
+                        <li class="nav_list2_item"><a class="nav_link" href="#animation">Animation</a></li>
                     </ul>
                 </li>
-                <li class="nav_list2_container"><a class="nav_link" href="#">List of movies</a></li>
             </ul>
         </nav>
     </header>
