styling of elements

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>My webpage</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet" />
     <script src="./js/app.js"></script>
 </head>
