--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <article class="projects_item" id="tetris">
                             <h3 class="projects_inner_header" >Tetris</h3>
                             <div class="projects_inner_item_container">
-                                <div class="projects_item_photo photo-1">Game photo</div>
+                                <div class="projects_item_photo photo-1"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Challenge yourself with modified version of Tetris game! Be carefull - the bomb is falling! Decide quickly what to destroy. Want to check your reaction to unexpected situation - just rotate the board  upside-down. Or maybe you will be disoriented when action of left and right arrows will be switched? Try it!</p>
                                     <p class="projects_item_description">Technology: HTML5, CSS3, JS, ES6, Webpack, Rest API, npm</p>
@@ -107,7 +107,7 @@
                         <article class="projects_item" id="sit">
                             <h3 class="projects_inner_header" >Sit on chair</h3>
                             <div class="projects_inner_item_container">
-                                <div class="projects_item_photo photo-1">Sitonchai</div>
+                                <div class="projects_item_photo photo-1"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Check the website of show and choose the chair. Example of shop webpage</p>
                                     <p class="projects_item_description">Technology: HTML5, CSS3, JS, ES6</p>
@@ -118,7 +118,7 @@
                         <article class="projects_item" id="animation">
                             <h3 class="projects_inner_header" >Animation</h3>
                             <div class="projects_inner_item_container">
-                                <div class="projects_item_photo photo-1">anim</div>
+                                <div class="projects_item_photo photo-1"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Enjoy the animation written in CSS. The animation consists of two parts: 1) appearance and moving icon and description and 2) appearance and moving of text</p>
                                     <p class="projects_item_description">Technology: HTML5, CSS3</p>
