--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
 <head>
-    <title>My webpage</title>
+    <title>Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
@@ -62,7 +62,7 @@
                                     <p class="projects_item_description">Challenge yourself with modified version of Tetris game! Be carefull - the bomb is falling! Decide quickly what to destroy. Want to check your reaction to unexpected situation - just rotate the board  upside-down. Or maybe you will be disoriented when action of left and right arrows will be switched? Try it!</p>
                                     <p class="projects_item_description">Technology: HTML5, CSS3, JS, ES6, Webpack, Rest API, npm</p>
                                 </div>
-                                <button class="projects_button"><a href="https://annastachurska.github.io/Tetris/">Click to play</a></button>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/Tetris/" target="_blank">Click to play</a></button>
                             </div>
                         </article>
                         <article class="projects_item" id="memory">
@@ -73,7 +73,7 @@
                                     <p class="projects_item_description">Are you a scientist? Or maybe you are curious about science terminology game? Try it and check your knowledge or luck! The game is not a matching of two identical photos but you have to find proper pair - name and description. Checking the matching is done only when you decide to do so by clicking the button. Enjoy learning!</p>
                                     <p class="projects_item_description">Technology: HTML5, CSS3, JS, ES6</p>
                                 </div>
-                                <button class="projects_button"><a href="https://annastachurska.github.io/Memory_for_scientists/">Click to play</a></button>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/Memory_for_scientists/" target="_blank">Click to play</a></button>
                             </div>
                         </article>
                         <article class="projects_item" id="life">
@@ -84,8 +84,8 @@
                                     <p class="projects_item_description">Observe the fascinating simulation of life of cells. Is it to crowded for them to live? Or maybe they are incapable of surviving on their own? Play the game and check how the cell living status evolves! You can always pause the game and restart it. You can also reset the board and start anew. Watch the beautiful structures created by living cells!</p>
                                     <p class="projects_item_description">Technology used: HTML5, CSS3, JS, ES6, npm, Webpack</p>
                                 </div>
-                                <button class="projects_button"><a href="https://annastachurska.github.io/Game_of_life/">Click to play</a></button>
-                                <button class="projects_button"><a href="https://annastachurska.github.io/React_Game_of_Life/">Click to play (react version)</a></button>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/Game_of_life/" target="_blank">Click to play</a></button>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/React_Game_of_Life/" target="_blank">Click to play (React version)</a></button>
                             </div>
                         </article>
                         <article class="projects_item" id="furry">
@@ -96,7 +96,7 @@
                                     <p class="projects_item_description">Fluffy Furry is hungry and wants to eat the dot. Feed the Furry by leading it to eat as many dots as possible. Be careful not to hit the walls because Furry will faint and stop moving.</p>
                                     <p class="projects_item_description">Technology used: HTML5, CSS3, JS, npm</p>
                                 </div>
-                                <button class="projects_button"><a href="https://annastachurska.github.io/Furry_Game/">Click to play</a></button>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/Furry_Game/" target="_blank">Click to play</a></button>
                             </div>
                         </article>
                     </div>
@@ -107,23 +107,24 @@
                         <article class="projects_item" id="sit">
                             <h3 class="projects_inner_header" >Sit on chair</h3>
                             <div class="projects_inner_item_container">
-                                <div class="projects_item_photo photo-1"></div>
+                                <div class="projects_item_photo photo-5"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Check the website of show and choose the chair. Example of shop webpage</p>
                                     <p class="projects_item_description">Technology: HTML5, CSS3, JS, ES6</p>
                                 </div>
-                                <button class="projects_button"><a href="https://annastachurska.github.io/Sit_on_chair/">Click to visit</a></button>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/Sit_on_chair/" target="_blank">Click to visit</a></button>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/React_Sit_on_chair/" target="_blank">Click to visit (React version)</a></button>
                             </div>
                         </article>
                         <article class="projects_item" id="animation">
                             <h3 class="projects_inner_header" >Animation</h3>
                             <div class="projects_inner_item_container">
-                                <div class="projects_item_photo photo-1"></div>
+                                <div class="projects_item_photo photo-6"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Enjoy the animation written in CSS. The animation consists of two parts: 1) appearance and moving icon and description and 2) appearance and moving of text</p>
                                     <p class="projects_item_description">Technology: HTML5, CSS3</p>
                                 </div>
-                                <button class="projects_button"><a href="https://annastachurska.github.io/Animation/">Click to visit</a></button>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/Animation/" target="_blank">Click to visit</a></button>
                             </div>
                         </article>
                     </div>
