updated description of webpages

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <div class="projects_item_photo photo-3"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Observe the fascinating simulation of life of cells. Is it to crowded for them to live? Or maybe they are incapable of surviving on their own? Play the game and check how the cell living status evolves! You can always pause the game and restart it. You can also reset the board and start anew. Watch the beautiful structures created by living cells!</p>
-                                    <p class="projects_item_description">Technology used: HTML5, CSS3, JS, ES6, npm, Webpack</p>
+                                    <p class="projects_item_description">Technology used: HTML5, CSS3, JS, ES6, React, npm, Webpack</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Game_of_life/" target="_blank">Click to play</a></button>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/React_Game_of_Life/" target="_blank">Click to play (React version)</a></button>
@@ -109,8 +109,10 @@
                             <div class="projects_inner_item_container">
                                 <div class="projects_item_photo photo-5"></div>
                                 <div class="projects_item_text_container">
-                                    <p class="projects_item_description">Check the website of show and choose the chair. Example of shop webpage</p>
-                                    <p class="projects_item_description">Technology: HTML5, CSS3, JS, ES6</p>
+                                    <p class="projects_item_description">Check the website of show and choose the chair. Example of shop webpage. Original page is written in HTML5. Second version of page is written in React (part of original page). Features: upon clicking on ">" and "<" the photo of chair is changing.
+                                    You can compose your own chair in proper section.
+                                    </p>
+                                    <p class="projects_item_description">Technology: HTML5, CSS3, JS, ES6, React, npm, Webpack</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Sit_on_chair/" target="_blank">Click to visit</a></button>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/React_Sit_on_chair/" target="_blank">Click to visit (React version)</a></button>
@@ -121,8 +123,8 @@
                             <div class="projects_inner_item_container">
                                 <div class="projects_item_photo photo-6"></div>
                                 <div class="projects_item_text_container">
-                                    <p class="projects_item_description">Enjoy the animation written in CSS. The animation consists of two parts: 1) appearance and moving icon and description and 2) appearance and moving of text</p>
-                                    <p class="projects_item_description">Technology: HTML5, CSS3</p>
+                                    <p class="projects_item_description">Enjoy the animation written in CSS. The animation consists of two parts: 1) appearance and moving icon and description (flying in and out, change of color and rotation) and 2) appearance and moving of text (flying-in and out, rotation, change of size).</p>
+                                    <p class="projects_item_description">Technology: HTML5, CSS3, ES6</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Animation/" target="_blank">Click to visit</a></button>
                             </div>
